--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "zap.stream",
-  "name": "zap.stream",
+  "short_name": "arvrtise z",
+  "name": "arvrtise z",
   "icons": [
     {
       "src": "logo.png",
